--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 # Ignore generated Windows binaries and debug symbols
 *.exe
 *.pdb
+
+# Node artifacts
+node_modules/
+coverage/
+.nyc_output/
+.vitest/
