--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "test": "vitest run",
     "test:watch": "vitest",
-    "dev": "vite",
+    "dev": "concurrently --kill-others-on-fail --names frontend,backend \"npm:dev:frontend\" \"npm:dev:backend\"",
+    "dev:frontend": "vite",
+    "dev:backend": "node scripts/backend-server.js",
     "build": "vite build",
     "preview": "vite preview",
-    "backend": "node scripts/backend-server.js",
+    "backend": "npm run dev:backend",
     "cy:open": "cypress open",
     "cy:run": "cypress run"
   },
@@ -27,6 +29,7 @@
   "homepage": "https://github.com/JohnDoe6345789/winejs#readme",
   "devDependencies": {
     "@vitejs/plugin-react": "^5.0.4",
+    "concurrently": "^9.2.1",
     "cypress": "^15.6.0",
     "jsdom": "^27.2.0",
     "vite": "^5.2.0",
@@ -35,11 +38,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/space-grotesk": "^5.0.20",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
     "@mui/system": "^5.15.20",
     "@mui/utils": "^5.15.20",
-    "@fontsource/space-grotesk": "^5.0.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "ws": "^8.18.3"
